fix(main): sincroniza rota de reacoes com o novo metodo UsuarioBO e ajusta DTO