@@ -1,13 +1,14 @@
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.time.LocalDate;
 import java.util.Map;
 
 import com.auth0.jwt.JWT;
 import com.auth0.jwt.algorithms.Algorithm;
-import io.github.cdimascio.dotenv.Dotenv; // IMPORT DO DOTENV
+import io.github.cdimascio.dotenv.Dotenv;
 
 import com.bo.UsuarioBO;
 import com.dao.*;
@@ -16,13 +17,10 @@ import io.javalin.Javalin;
 
 public class Main {
     private static final String GOOGLE_CLIENT_ID = "1095979412262-me3kh924htbgh5fmt434hqpkhjsv715s.apps.googleusercontent.com";
-    
-    // CARREGA O FICHEIRO .env (E pega a chave JWT em segurança)
     private static final Dotenv dotenv = Dotenv.configure().ignoreIfMissing().load();
     private static final String JWT_SECRET = dotenv.get("JWT_SECRET", "CHAVE_EMERGENCIA_SUPER_SECRETA");
 
     public static void main(String[] args) {
-
         Javalin app = Javalin.create(config -> {
             config.bundledPlugins.enableCors(cors -> cors.addRule(it -> it.anyHost()));
             config.http.maxRequestSize = 20_000_000L;
@@ -30,15 +28,15 @@ public class Main {
 
         System.out.println("🔥 VIVER+ online em: http://localhost:8080");
 
-        UsuarioBO        usuarioBO   = new UsuarioBO();
-        PostDAO          postDAO     = new PostDAO();
-        UsuarioDAO       usuarioDAO  = new UsuarioDAO();
-        ComunidadeDAO    comDAO      = new ComunidadeDAO();
-        NotificacaoDAO   notifDAO    = new NotificacaoDAO();
-        MensagemDAO      msgDAO      = new MensagemDAO();
+        UsuarioBO usuarioBO = new UsuarioBO();
+        PostDAO postDAO = new PostDAO();
+        UsuarioDAO usuarioDAO = new UsuarioDAO();
+        ComunidadeDAO comDAO = new ComunidadeDAO();
+        NotificacaoDAO notifDAO = new NotificacaoDAO();
+        MensagemDAO msgDAO = new MensagemDAO();
         MensagemGrupoDAO msgGrupoDAO = new MensagemGrupoDAO();
 
-        // ── WEBSOCKETS (Observer em tempo real) ───────────────────────────
+        // ── WEBSOCKETS (Observer) ──────────────────────────────────────────
         app.ws("/ws/notificacoes/{uid}", ws -> {
             ws.onConnect(ctx -> {
                 int uid = Integer.parseInt(ctx.pathParam("uid"));
@@ -70,7 +68,7 @@ public class Main {
             }
         });
 
-        // ── AUTH ──────────────────────────────────────────────────────────
+        // ── AUTH E REAÇÕES ────────────────────────────────────────────────
         app.post("/api/login", ctx -> {
             try {
                 DadosLogin d = ctx.bodyAsClass(DadosLogin.class);
@@ -89,24 +87,32 @@ public class Main {
             } catch (Exception e) { ctx.status(400).result(e.getMessage()); }
         });
 
+        app.post("/api/posts/{id}/reagir", ctx -> {
+            try {
+                int postId = Integer.parseInt(ctx.pathParam("id"));
+                DadosInteracao d = ctx.bodyAsClass(DadosInteracao.class);
+                ctx.result(usuarioBO.processarReacao(d.usuarioId, postId, d.tipo) ? "reagiu" : "removeu");
+            } catch (Exception e) { ctx.status(400).result(e.getMessage()); }
+        });
+
         // ── GOOGLE OAUTH ──────────────────────────────────────────────────
         app.post("/api/auth/google", ctx -> {
             try {
                 DadosGoogle d = ctx.bodyAsClass(DadosGoogle.class);
-                URL url = new URL("https://oauth2.googleapis.com/tokeninfo?id_token=" + d.credential);
+                URL url = new URI("https://oauth2.googleapis.com/tokeninfo?id_token=" + d.credential).toURL();
                 HttpURLConnection conn = (HttpURLConnection) url.openConnection();
                 conn.setRequestMethod("GET");
-                if (conn.getResponseCode() != 200)
-                    throw new Exception("Token Google inválido.");
+                if (conn.getResponseCode() != 200) throw new Exception("Token Google inválido.");
+                
                 StringBuilder sb = new StringBuilder();
                 try (BufferedReader br = new BufferedReader(new InputStreamReader(conn.getInputStream()))) {
                     String line; while ((line = br.readLine()) != null) sb.append(line);
                 }
                 String json = sb.toString();
                 String googleId = extrairCampo(json, "sub");
-                String email    = extrairCampo(json, "email");
-                String nome     = extrairCampo(json, "name");
-                String foto     = extrairCampo(json, "picture");
+                String email = extrairCampo(json, "email");
+                String nome = extrairCampo(json, "name");
+                String foto = extrairCampo(json, "picture");
                 
                 UsuarioVO usuario = usuarioBO.loginOuCadastrarGoogle(googleId, nome, email, foto);
                 String token = gerarToken(usuario);
@@ -122,8 +128,7 @@ public class Main {
                 usuarioBO.completarPerfilGoogle(d.usuarioId,
                         d.nickname != null ? d.nickname.replace("@", "") : null,
                         d.dataNascimento != null ? LocalDate.parse(d.dataNascimento) : null);
-                UsuarioVO atualizado = usuarioDAO.buscarPorId(d.usuarioId);
-                ctx.json(atualizado);
+                ctx.json(usuarioDAO.buscarPorId(d.usuarioId));
             } catch (Exception e) { ctx.status(400).result(e.getMessage()); }
         });
 
@@ -151,11 +156,12 @@ public class Main {
             } catch (Exception e) { ctx.status(400).result(e.getMessage()); }
         });
 
-        app.post("/api/posts/{id}/curtir", ctx -> {
+        app.post("/api/posts/{id}/reagir", ctx -> {
             try {
                 int postId = Integer.parseInt(ctx.pathParam("id"));
                 DadosInteracao d = ctx.bodyAsClass(DadosInteracao.class);
-                ctx.result(usuarioBO.processarCurtida(d.usuarioId, postId) ? "curtiu" : "descurtiu");
+                // Chamada correta ao método do UsuarioBO
+                ctx.result(usuarioBO.processarReacao(d.usuarioId, postId, d.tipo) ? "reagiu" : "removeu");
             } catch (Exception e) { ctx.status(400).result(e.getMessage()); }
         });
 
@@ -355,28 +361,24 @@ public class Main {
         return m.find() ? m.group(1) : "";
     }
 
-    // Método Auxiliar para Gerar Token JWT
     private static String gerarToken(UsuarioVO u) {
-        return JWT.create()
-            .withSubject(String.valueOf(u.getId()))
-            .withClaim("email", u.getEmail())
-            .withExpiresAt(new java.util.Date(System.currentTimeMillis() + 86400000)) // 24h
-            .sign(Algorithm.HMAC256(JWT_SECRET));
+        return JWT.create().withSubject(String.valueOf(u.getId())).withClaim("email", u.getEmail())
+            .withExpiresAt(new java.util.Date(System.currentTimeMillis() + 86400000)).sign(Algorithm.HMAC256(JWT_SECRET));
     }
 
     // DTOs
-    public static class DadosLogin           { public String email, senha;                                                                      public DadosLogin() {} }
-    public static class DadosCadastro        { public String nome, nickname, email, senha, dataNascimento;                                      public DadosCadastro() {} }
-    public static class DadosGoogle          { public String credential;                                                                        public DadosGoogle() {} }
-    public static class DadosCompletarPerfil { public int usuarioId; public String nickname, dataNascimento;                                    public DadosCompletarPerfil() {} }
-    public static class DadosInteracao       { public int usuarioId; public String texto;                                                       public DadosInteracao() {} }
-    public static class DadosPost            { public String texto, imagem, destinoTipo; public int destinoId; public UsuarioVO autor;        public DadosPost() {} }
-    public static class DadosNovaComunidade  { public String nome, descricao; public int criadorId;                                             public DadosNovaComunidade() {} }
-    public static class DadosEditarGrupo     { public int usuarioId; public String nome, descricao, fotoGrupo;                                  public DadosEditarGrupo() {} }
-    public static class DadosFoto            { public String base64;                                                                            public DadosFoto() {} }
-    public static class DadosMensagem        { public int remetenteId, destinatarioId; public String conteudo;                                  public DadosMensagem() {} }
-    public static class DadosMensagemGrupo   { public int usuarioId; public String conteudo;                                                    public DadosMensagemGrupo() {} }
-    public static class DadosConvite         { public int convidanteId, convidadoId;                                                            public DadosConvite() {} }
-    public static class DadosRespostaConvite { public int usuarioId; public boolean aceitar;                                                    public DadosRespostaConvite() {} }
-    public static class DadosNickname        { public String nickname;                                                                          public DadosNickname() {} }
+    public static class DadosLogin { public String email, senha; public DadosLogin() {} }
+    public static class DadosCadastro { public String nome, nickname, email, senha, dataNascimento; public DadosCadastro() {} }
+    public static class DadosGoogle { public String credential; public DadosGoogle() {} }
+    public static class DadosCompletarPerfil { public int usuarioId; public String nickname, dataNascimento; public DadosCompletarPerfil() {} }
+    public static class DadosInteracao { public int usuarioId; public String texto; public String tipo; public DadosInteracao() {} }
+    public static class DadosPost { public String texto, imagem, destinoTipo; public int destinoId; public UsuarioVO autor; public DadosPost() {} }
+    public static class DadosNovaComunidade { public String nome, descricao; public int criadorId; public DadosNovaComunidade() {} }
+    public static class DadosEditarGrupo { public int usuarioId; public String nome, descricao, fotoGrupo; public DadosEditarGrupo() {} }
+    public static class DadosFoto { public String base64; public DadosFoto() {} }
+    public static class DadosMensagem { public int remetenteId, destinatarioId; public String conteudo; public DadosMensagem() {} }
+    public static class DadosMensagemGrupo { public int usuarioId; public String conteudo; public DadosMensagemGrupo() {} }
+    public static class DadosConvite { public int convidanteId, convidadoId; public DadosConvite() {} }
+    public static class DadosRespostaConvite { public int usuarioId; public boolean aceitar; public DadosRespostaConvite() {} }
+    public static class DadosNickname { public String nickname; public DadosNickname() {} }
 }
